# NetSentry-Engine

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
src/netsentry/: __init__.py
src/netsentry/agent/: __init__.py  capture_agent.py
src/netsentry/common/: __init__.py  privileges.py  schemas.py
src/netsentry/server/: __init__.py  dashboard_server.py  packet_history_log.txt
tests/: __init__.py
