[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netsentry-engine"
version = "0.1.0"
description = "Isolated network traffic monitoring system and packet analysis console."
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
